# ML-Trading-System

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  PLANNING.md  PROGRESS_2026-03-20.md  pyproject.toml
scripts/: run_backtest.py  run_data_pipeline.py  run_model_training.py
src/ml_trading_system/backtesting/: backtester.py
src/ml_trading_system/features/: feature_engineer.py
src/ml_trading_system/models/: evaluator.py  splitter.py  trainer.py
tests/: test_backtester.py  test_data_loader.py  test_feature_engineer.py
