[project]
name = "ml-trading-system"
version = "0.1.0"
description = ""
authors = [
    {name = "XanderBloomer",email = "Xanderbloomer@icloud.com"}
]
requires-python = ">=3.11,<3.14.4"
dependencies = ["pandas (>=3.0.1,<4.0.0)", "numpy (>=2.4.3,<3.0.0)", "scikit-learn (>=1.8.0,<2.0.0)", "yfinance (>=1.2.0,<2.0.0)", "fastapi (>=0.135.1,<0.136.0)", "uvicorn (>=0.42.0,<0.43.0)", "python-dotenv (>=1.2.2,<2.0.0)", "xgboost (>=3.2.0,<4.0.0)"]

[tool.poetry]
packages = [{ include = "ml_trading_system", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "pre-commit (>=4.5.1,<5.0.0)"
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
